tests/paczka1/small_fuzzy/37638656.err
Error in line 10: hXOnjs S717 12,5
Error in line 11: hXOnjs S173 47,9
